# BuildAndDispatch

./: .gitignore  .gitmodules  CMakeLists.txt
Resources/Fonts/: ConsolaMono.json  RobotoRegular.json
Resources/Graphics/: SignalClear.vif  SignalDanger.vif
Resources/Levels/: Level0.json
Resources/Shaders/: DebugLine.vert  SolidColor.frag  SolidColor.vert  SolidColorBrush.frag  SolidColorBrush.vert  TextMSDF.frag  TextMSDF.vert  UIRect.frag  UIRect.vert  UITextureRect.frag  UITextureRect.vert  VectorIcon.frag  VectorIcon.vert
Source/Core/: Assert.h  GameLoop.cpp  GameLoop.h  InputState.h  Logger.cpp  Logger.h  Main.cpp  Rect2D.h  Transform.h
Source/Layer/: GameUILayer.cpp  GameUILayer.h  Layer.h  TrackLayer.cpp  TrackLayer.h
Source/Platform/: File.h  Time.h
Source/Renderer/: Buffer.cpp  Buffer.h  GeometryBuffer.cpp  GeometryBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VectorIcon.cpp  VectorIcon.h  Window.cpp  Window.h
Source/Simulation/: Route.h  Signal.h  Timetable.h  Track.h  Train.h  World.cpp  World.h  WorldSerialization.cpp  WorldSerialization.h  WorldTime.h
Source/UI/: Brush.h  Container.h  Font.cpp  Font.h  RenderBuffer.cpp  RenderBuffer.h  Size.h  TextLayout.h  Widget.cpp  Widget.h
Source/UI/Brushes/: SolidColorBrush.cpp  SolidColorBrush.h
Source/UI/Containers/: CanvasContainer.cpp  CanvasContainer.h  StackContainer.cpp  StackContainer.h  TableContainer.cpp  TableContainer.h  VerticalContainer.cpp  VerticalContainer.h
Source/UI/Widgets/: Button.cpp  Button.h  Image.cpp  Image.h  Label.cpp  Label.h  Panel.cpp  Panel.h
Source/View/: TrackView.cpp  TrackView.h  View.h
Source/Windows/: File.cpp  File.h  Time.cpp
